<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/etStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        android:digits="abcdefghijklmonpqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/entername"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/entername" />

    <EditText
        android:id="@+id/etDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/enterdob"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/etStudentName"
        app:layout_constraintTop_toBottomOf="@id/etStudentName"/>

    <EditText
        android:id="@+id/etDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enterdepartment"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/etStudentName"
        app:layout_constraintTop_toBottomOf="@id/etDOB"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/etStudentName"
        app:layout_constraintTop_toBottomOf="@id/etDepartment"
        />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@id/etStudentName"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSave"        />
</androidx.constraintlayout.widget.ConstraintLayout>